# ghc-mod

./: .ghci  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AA.hs  Browse.hs  COPYING.BSD3.base  Cabal.hs  CabalApi.hs  CabalDev.hs  ChangeLog  Check.hs  CodingStyle  Cradle.hs  Debug.hs  Doc.hs  ErrMsg.hs  Flag.hs  GHCApi.hs  GHCChoice.hs  GHCMod.hs  Gap.hs  GetType.hs  GhcMod.hs  ISSUE336.md  Info.hs  LICENSE  Lang.hs  Lint.hs  List.hs  PKGBUILD  Param.hs  README  README.md  REAME.md  Setup.hs  SetupCompat.hs  Types.hs  Utils.hs  (+8 more)
CabalHelper/: Common.hs  GuessGhc.hs  Main.hs  Types.hs  Wrapper.hs
Data/Binary/: Generic.hs
GhcMod/: Boot.hs  Browse.hs  CaseSplit.hs  Check.hs  Debug.hs  FillSig.hs  Find.hs  Flag.hs  Info.hs  Internal.hs  Lang.hs  Lint.hs  Modules.hs  PkgDoc.hs  Test.hs
GhcMod/Exe/: Boot.hs  Browse.hs  CaseSplit.hs  Check.hs  Debug.hs  FillSig.hs  Find.hs  Flag.hs  (+8 more)
GhcModExe/: Boot.hs  Browse.hs  CaseSplit.hs  Check.hs  Debug.hs  FillSig.hs  Find.hs  Flag.hs  Info.hs  Internal.hs  Lang.hs  Lint.hs  Modules.hs  PkgDoc.hs  Test.hs
NotCPP/: COPYING  Declarations.hs  LookupValueName.hs  OrphanEvasion.hs  ScopeLookup.hs  Utils.hs
bench/: Bench.hs
bench/data/simple-cabal/: simple-cabal.cabal
cabal-helper/: Common.hs  Main.hs  Wrapper.hs
core/: GhcModCore.hs  Setup.hs  ghc-mod-core.cabal
core/GhcMod/: CabalHelper.hs  Caching.hs  Cradle.hs  CustomPackageDb.hs  DebugLogger.hs  Doc.hs  DynFlags.hs  DynFlagsTH.hs  Error.hs  FileMapping.hs  Gap.hs  GhcPkg.hs  HomeModuleGraph.hs  LightGhc.hs  Logger.hs  Logging.hs  ModuleLoader.hs  Monad.hs  PathsAndFiles.hs  Pretty.hs  Read.hs  SrcUtils.hs  Stack.hs  Target.hs  Types.hs  Utils.hs
core/GhcMod/Monad/: Compat.hs_h  Env.hs  Newtypes.hs  Types.hs
core/GhcMod/Options/: DocUtils.hs  Help.hs  Options.hs
core/Language/Haskell/GhcMod/: CabalHelper.hs  Caching.hs  Cradle.hs  CustomPackageDb.hs  DebugLogger.hs  Doc.hs  DynFlags.hs  DynFlagsTH.hs  Error.hs  FileMapping.hs  Gap.hs  GhcPkg.hs  HomeModuleGraph.hs  LightGhc.hs  Logger.hs  Logging.hs  Monad.hs  Output.hs  PathsAndFiles.hs  Pretty.hs  Read.hs  SrcUtils.hs  Stack.hs  Target.hs  Types.hs  Utils.hs
core/Language/Haskell/GhcMod/Caching/: Types.hs
core/Language/Haskell/GhcMod/Monad/: Env.hs  Log.hs  Newtypes.hs  Orphans.hs  Out.hs  State.hs  Types.hs
core/Language/Haskell/GhcMod/Options/: DocUtils.hs  Help.hs  Options.hs
core/shared/: Utils.hs
core/src/GhcMod/: Caching.hs  Convert.hs  Doc.hs  Error.hs  FileMapping.hs  Gap.hs  LightGhc.hs  Logger.hs  PathsAndFiles.hs  Pretty.hs  Read.hs  Target.hs  World.hs
core/src/GhcMod/Monad/: Log.hs  Orphans.hs  State.hs
core/src/GhcMod/Options/: Help.hs
doc/: Makefile  bug.piki  copyright.piki  emacs.piki  ghc-mod.piki  ghc-modi.piki  history.piki  index.piki  install.piki  preparation.piki
elisp/: .gitignore  Makefile  ghc-check.el  ghc-command.el  ghc-comp.el  ghc-doc.el  ghc-flymake.el  ghc-func.el  ghc-indent.el  ghc-info.el  ghc-ins-mod.el  ghc-mod.el  ghc-pkg.el  ghc-process.el  ghc-rewrite.el  ghc-types.el  ghc.el
elisp-bootstrap/: Makefile  ghc-mod.el
elisp-internal/: Makefile  ghc-comp.el  ghc-doc.el  ghc-func.el  ghc-info.el  ghc-mod-internal-pkg.el  ghc-mod-internal.el  ghc-process.el  ghc-rewrite.el  ghc.el
ghc-mod-core/: GhcModCore.hs  ghc-mod-core.cabal
gm-common/: gm-common.cabal
hackage-metadata/: Cabal-1.1.6.upload-date  Cabal-1.10.0.0.upload-date  Cabal-1.10.1.0.upload-date  Cabal-1.10.2.0.upload-date  Cabal-1.12.0.upload-date  Cabal-1.14.0.upload-date  Cabal-1.16.0.1.upload-date  Cabal-1.16.0.2.upload-date  Cabal-1.16.0.3.upload-date  Cabal-1.16.0.upload-date  Cabal-1.18.0.upload-date  Cabal-1.18.1.1.upload-date  Cabal-1.18.1.2.upload-date  Cabal-1.18.1.3.upload-date  Cabal-1.18.1.4.upload-date  Cabal-1.18.1.5.upload-date  Cabal-1.18.1.6.upload-date  Cabal-1.18.1.7.upload-date  Cabal-1.18.1.upload-date  Cabal-1.2.1.upload-date  Cabal-1.2.2.0.upload-date  Cabal-1.2.3.0.upload-date  Cabal-1.2.4.0.upload-date  Cabal-1.20.0.0.upload-date  Cabal-1.20.0.1.upload-date  Cabal-1.20.0.2.upload-date  Cabal-1.20.0.3.upload-date  Cabal-1.20.0.4.upload-date  Cabal-1.22.0.0.upload-date  Cabal-1.22.1.0.upload-date  Cabal-1.22.1.1.upload-date  Cabal-1.22.2.0.upload-date  Cabal-1.22.3.0.upload-date  Cabal-1.22.4.0.upload-date  Cabal-1.22.5.0.upload-date  Cabal-1.22.6.0.upload-date  Cabal-1.22.7.0.upload-date  Cabal-1.22.8.0.upload-date  Cabal-1.24.0.0.upload-date  Cabal-1.4.0.0.upload-date  (+1360 more)
scripts/: bounds.hs  bump.sh  collect-debug-info.sh  compare-versions.sh  diff.hs  docker.sh  download-metadata.sh  edit-bounds-macros.el  extract-build-deps.hs  extract-upload-date.sh  upload-metadata.hs
shelltest/: ShellTest.hs  browse.test  version.test
src/: Boot.hs  CLI.hs  GHCMod.hs  GHCModCabal.hs  GHCModMain.hs  GHCModVim.hs  GHCModWrapper.hs  GHCModi.hs  GhcModMain.hs  GhcModi.hs  Misc.hs  Utils.hs
test/: BrowseSpec.hs  CabalApiSpec.hs  CabalHelperSpec.hs  CabalSpec.hs  CaseSplitSpec.hs  CheckSpec.hs  CradleSpec.hs  CustomPackageDbSpec.hs  DebugSpec.hs  Dir.hs  Expectation.hs  FileMappingSpec.hs  FindSpec.hs  FlagSpec.hs  GhcApiSpec.hs  GhcPkgSpec.hs  HaddockSpec.hs  HomeModuleGraphSpec.hs  ImportedFromSpec.hs  InfoSpec.hs  LangSpec.hs  LintSpec.hs  ListSpec.hs  Main.hs  MonadSpec.hs  PackageKeySpec.hs  PathsAndFilesSpec.hs  ShellEscapeSpec.hs  ShellParseSpec.hs  TargetSpec.hs  TestUtils.hs  UtilsSpec.hs  doctests.hs
test-elisp/: inp.hs  out.hs
test/data/cabal-preprocessors/: Main.hs  Preprocessed.hsc  cabal-preprocessors.cabal
test/data/cabal-project/: Foo.hs  Info.hs  Main.hs  cabal.sandbox.config.in  cabalapi.cabal
test/data/cabal-project/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/: Cabal-1.18.1.3-2b161c6bf77657aa17e1681d83cb051b.conf
test/data/check-test-subdir/: check-test-subdir.cabal
test/data/check-test-subdir/src/Check/Test/: Subdir.hs
test/data/check-test-subdir/test/: Foo.hs  Main.hs
test/data/check-test-subdir/test/Bar/: Baz.hs
test/data/custom-cradle/: custom-cradle.cabal  ghc-mod.cradle
test/data/file-mapping/duplicate-main/: duplicate-main.cabal
(+199 files in other folders)
