Name:                   ghc-mod
Version:                1.12.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.mew.org/~kazu/proj/ghc-mod/
Synopsis:               Happy Haskell programming on Emacs/Vim
Description:            This packages includes Elisp files
			and a Haskell command, "ghc-mod".
			"ghc*.el" enable completion of
			Haskell symbols on Emacs.
                        Flymake is also integrated.
			"ghc-mod" is a backend of "ghc*.el".
			It lists up all installed modules
                        or extracts names of functions, classes,
                        and data declarations.
                        To use "ghc-mod" on Vim,
                        see <https://github.com/eagletmt/ghcmod-vim> or
                        <https://github.com/scrooloose/syntastic>
Category:               Development
Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Dir:               elisp
Data-Files:             Makefile ghc.el ghc-func.el ghc-doc.el ghc-comp.el
                        ghc-flymake.el ghc-command.el ghc-info.el
                        ghc-ins-mod.el ghc-indent.el
Extra-Source-Files:     ChangeLog
			test/data/*.cabal
                        test/data/*.hs
                        test/data/cabal-dev/packages-7.6.2.conf
                        test/data/ghc-mod-check/*.hs
                        test/data/ghc-mod-check/*.cabal
                        test/data/ghc-mod-check/Data/*.hs
                        test/data/subdir1/subdir2/dummy
Executable ghc-mod
  Default-Language:     Haskell2010
  Main-Is:              GHCMod.hs
  Other-Modules:        Browse
                        CabalApi
                        Check
                        Cradle
                        Debug
                        ErrMsg
                        Flag
                        GHCApi
                        GHCChoice
                        Gap
                        Info
                        Lang
                        Lint
                        List
                        Paths_ghc_mod
                        Types
  GHC-Options:          -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal >= 1.10
                      , containers
                      , convertible
                      , directory
                      , filepath
                      , ghc
                      , ghc-paths
                      , ghc-syb-utils
                      , hlint >= 1.7.1
                      , io-choice
                      , old-time
                      , process
                      , syb
                      , time
                      , transformers

Test-Suite spec
  Default-Language:     Haskell2010
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Expectation
                        BrowseSpec
                        CabalApiSpec
                        CheckSpec
                        FlagSpec
                        InfoSpec
                        LangSpec
                        LintSpec
                        ListSpec
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal >= 1.10
                      , containers
                      , convertible
                      , directory
                      , filepath
                      , ghc
                      , ghc-paths
                      , ghc-syb-utils
                      , hlint >= 1.7.1
                      , io-choice
                      , old-time
                      , process
                      , syb
                      , time
                      , transformers
                      , hspec

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/ghc-mod.git
