Name:                   ghc-mod
Version:                2.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.mew.org/~kazu/proj/ghc-mod/
Synopsis:               Happy Haskell programming on Emacs/Vim
Description:            This packages includes Elisp files
			and a Haskell command, "ghc-mod".
			"ghc*.el" enable completion of
			Haskell symbols on Emacs.
                        Flymake is also integrated.
			"ghc-mod" is a backend of "ghc*.el".
			It lists up all installed modules
                        or extracts names of functions, classes,
                        and data declarations.
                        To use "ghc-mod" on Vim,
                        see <https://github.com/eagletmt/ghcmod-vim> or
                        <https://github.com/scrooloose/syntastic>
Category:               Development
Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Dir:               elisp
Data-Files:             Makefile ghc.el ghc-func.el ghc-doc.el ghc-comp.el
                        ghc-flymake.el ghc-command.el ghc-info.el
                        ghc-ins-mod.el ghc-indent.el
Extra-Source-Files:     ChangeLog
			test/data/*.cabal
                        test/data/*.hs
                        test/data/cabal-dev/packages-7.6.2.conf/dummy
                        test/data/ghc-mod-check/*.hs
                        test/data/ghc-mod-check/*.cabal
                        test/data/ghc-mod-check/Data/*.hs
                        test/data/subdir1/subdir2/dummy
                        test/data/check-test-subdir/*.cabal
                        test/data/check-test-subdir/test/*.hs
                        test/data/check-test-subdir/test/Bar/*.hs
                        test/data/check-test-subdir/src/Check/Test/*.hs

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Language.Haskell.GhcMod
  Other-Modules:        Language.Haskell.GhcMod.Browse
                        Language.Haskell.GhcMod.CabalApi
                        Language.Haskell.GhcMod.Check
                        Language.Haskell.GhcMod.Cradle
                        Language.Haskell.GhcMod.Doc
                        Language.Haskell.GhcMod.Debug
                        Language.Haskell.GhcMod.ErrMsg
                        Language.Haskell.GhcMod.Flag
                        Language.Haskell.GhcMod.GHCApi
                        Language.Haskell.GhcMod.GHCChoice
                        Language.Haskell.GhcMod.Gap
                        Language.Haskell.GhcMod.Info
                        Language.Haskell.GhcMod.Lang
                        Language.Haskell.GhcMod.Lint
                        Language.Haskell.GhcMod.List
                        Language.Haskell.GhcMod.Types
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal >= 1.10
                      , containers
                      , convertible
                      , directory
                      , filepath
                      , ghc
                      , ghc-paths
                      , ghc-syb-utils
                      , hlint >= 1.7.1
                      , io-choice
                      , old-time
                      , process
                      , syb
                      , time
                      , transformers

Executable ghc-mod
  Default-Language:     Haskell2010
  Main-Is:              GHCMod.hs
  Other-Modules:        Paths_ghc_mod
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4.0 && < 5
                      , directory
                      , filepath
                      , ghc
                      , ghc-mod

Test-Suite spec
  Default-Language:     Haskell2010
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Expectation
                        BrowseSpec
                        CabalApiSpec
                        CheckSpec
                        DebugSpec
                        FlagSpec
                        InfoSpec
                        LangSpec
                        LintSpec
                        ListSpec
  Build-Depends:        base >= 4.0 && < 5
                      , Cabal >= 1.10
                      , containers
                      , convertible
                      , directory
                      , filepath
                      , ghc
                      , ghc-paths
                      , ghc-syb-utils
                      , hlint >= 1.7.1
                      , io-choice
                      , old-time
                      , process
                      , syb
                      , time
                      , transformers
                      , hspec

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/ghc-mod.git
