Name:                   ghc-mod
Version:                5.8.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>,
                        Daniel Gröber <dxld@darkboxed.org>,
                        Alejandro Serrano <trupill@gmail.com>,
                        Nikolay Yakimov <root@livid.pp.ru>
Maintainer:             Daniel Gröber <dxld@darkboxed.org>
License:                AGPL-3
License-File:           LICENSE
License-Files:          COPYING.BSD3 COPYING.AGPL3
Homepage:               https://github.com/DanielG/ghc-mod
Synopsis:               Happy Haskell Hacking
Description:
  ghc-mod is a backend program to enrich Haskell programming in editors. It
  strives to offer most of the features one has come to expect from modern IDEs
  in any editor.

  ghc-mod provides a library for other haskell programs to use as well as a
  standalone program for easy editor integration. All of the fundamental
  functionality of the frontend program can be accessed through the library
  however many implementation details are hidden and if you want to
  significantly extend ghc-mod you should submit these changes upstream instead
  of implementing them on top of the library.


Category:               GHC, Development
Cabal-Version:          >= 1.18
Build-Type:             Custom
Data-Files:             elisp/Makefile
                        elisp/*.el
Extra-Source-Files:     ChangeLog
                        README.md
                        core/GhcMod/Monad/Compat.hs_h
                        test/data/annotations/*.hs
                        test/data/broken-cabal/*.cabal
                        test/data/broken-sandbox/cabal.sandbox.config
                        test/data/broken-sandbox/dummy.cabal
                        test/data/cabal-flags/cabal-flags.cabal
                        test/data/cabal-project/*.cabal
                        test/data/cabal-project/*.hs
                        test/data/cabal-project/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/Cabal-1.18.1.3-2b161c6bf77657aa17e1681d83cb051b.conf
                        test/data/cabal-project/subdir1/subdir2/dummy
                        test/data/case-split/*.hs
                        test/data/check-packageid/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/template-haskell-2.8.0.0-32d4f24abdbb6bf41272b183b2e23e9c.conf
                        test/data/check-test-subdir/*.cabal
                        test/data/check-test-subdir/src/Check/Test/*.hs
                        test/data/check-test-subdir/test/*.hs
                        test/data/check-test-subdir/test/Bar/*.hs
                        test/data/duplicate-pkgver/duplicate-pkgver.cabal
                        test/data/duplicate-pkgver/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/template-haskell-1.0-7c59d13f32294d1ef6dc6233c24df961.conf
                        test/data/duplicate-pkgver/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/template-haskell-2.8.0.0-14e543bdae2da4d2aeff5386892c9112.conf
                        test/data/duplicate-pkgver/.cabal-sandbox/i386-osx-ghc-7.6.3-packages.conf.d/template-haskell-2.8.0.0-32d4f24abdbb6bf41272b183b2e23e9c.conf
                        test/data/foreign-export/*.hs
                        test/data/ghc-mod-check/*.cabal
                        test/data/ghc-mod-check/*.hs
                        test/data/ghc-mod-check/lib/Data/*.hs
                        test/data/hlint/*.hs
                        test/data/home-module-graph/cpp/*.hs
                        test/data/home-module-graph/cycle/*.hs
                        test/data/home-module-graph/errors/*.hs
                        test/data/home-module-graph/indirect/*.hs
                        test/data/home-module-graph/indirect-update/*.hs
                        test/data/import-cycle/*.hs
                        test/data/non-exported/*.hs
                        test/data/pattern-synonyms/*.cabal
                        test/data/pattern-synonyms/*.hs
                        test/data/quasi-quotes/*.hs
                        test/data/template-haskell/*.hs
                        test/data/target/*.hs
                        test/data/check-missing-warnings/*.hs
                        test/data/custom-cradle/custom-cradle.cabal
                        test/data/custom-cradle/ghc-mod.package-db-stack
                        test/data/custom-cradle/package-db-a/.gitkeep
                        test/data/custom-cradle/package-db-b/.gitkeep
                        test/data/custom-cradle/package-db-c/.gitkeep
                        test/data/cabal-preprocessors/*.cabal
                        test/data/cabal-preprocessors/*.hs
                        test/data/cabal-preprocessors/*.hsc
                        test/data/file-mapping/*.hs
                        test/data/file-mapping/preprocessor/*.hs
                        test/data/file-mapping/lhs/*.lhs
                        test/data/nice-qualification/*.hs
                        test/data/stack-project/stack.yaml.in
                        test/data/stack-project/new-template.cabal
                        test/data/stack-project/*.hs
                        test/data/stack-project/app/*.hs
                        test/data/stack-project/src/*.hs
                        test/data/stack-project/test/*.hs
                        bench/data/simple-cabal/simple-cabal.cabal
                        bench/data/simple-cabal/*.hs


Custom-Setup
  Setup-Depends:         base
                       , Cabal >= 1.18 && < 1.25
                       , containers
                       , filepath
                       , directory
                       , process
                       , template-haskell
                       , transformers


Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-deprecations
  Default-Extensions:   ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                        ConstraintKinds, FlexibleContexts,
                        DataKinds, KindSignatures, TypeOperators, ViewPatterns
  HS-Source-Dirs:       ., core, shared
  Exposed-Modules:
                        GhcMod
                        GhcMod.Exe.Boot
                        GhcMod.Exe.Browse
                        GhcMod.Exe.CaseSplit
                        GhcMod.Exe.Check
                        GhcMod.Exe.Debug
                        GhcMod.Exe.FillSig
                        GhcMod.Exe.Find
                        GhcMod.Exe.Flag
                        GhcMod.Exe.Info
                        GhcMod.Exe.Internal
                        GhcMod.Exe.Lang
                        GhcMod.Exe.Lint
                        GhcMod.Exe.Modules
                        GhcMod.Exe.PkgDoc
                        GhcMod.Exe.Test
                        GhcMod.CabalHelper
                        GhcMod.Caching
                        GhcMod.Caching.Types
                        GhcMod.Convert
                        GhcMod.Cradle
                        GhcMod.CustomPackageDb
                        GhcMod.DebugLogger
                        GhcMod.Doc
                        GhcMod.DynFlags
                        GhcMod.DynFlagsTH
                        GhcMod.Error
                        GhcMod.FileMapping
                        GhcMod.Gap
                        GhcMod.GhcPkg
                        GhcMod.HomeModuleGraph
                        GhcMod.LightGhc
                        GhcMod.Logger
                        GhcMod.Logging
                        GhcMod.Monad
                        GhcMod.Monad.Env
                        GhcMod.Monad.Log
                        GhcMod.Monad.Newtypes
                        GhcMod.Monad.Orphans
                        GhcMod.Monad.Out
                        GhcMod.Monad.State
                        GhcMod.Monad.Types
                        GhcMod.Options.DocUtils
                        GhcMod.Options.Help
                        GhcMod.Options.Options
                        GhcMod.Output
                        GhcMod.PathsAndFiles
                        GhcMod.Pretty
                        GhcMod.Read
                        GhcMod.SrcUtils
                        GhcMod.Stack
                        GhcMod.Target
                        GhcMod.Types
                        GhcMod.Utils
                        GhcMod.World
  Other-Modules:        Paths_ghc_mod
                        Utils
                        Data.Binary.Generic
                        System.Directory.ModTime
  Build-Depends:
                      -- See Note [GHC Boot libraries]
                        binary
                      , bytestring
                      , containers
                      , deepseq
                      , directory
                      , filepath
                      , mtl
                      , old-time
                      , process
                      , template-haskell
                      , time
                      , transformers

                      , base                 < 4.10 && >= 4.6.0.1
                      , djinn-ghc            < 0.1  && >= 0.0.2.2
                      , extra                < 1.6  && >= 1.4
                      , fclabels             < 2.1  && >= 2.0
                      , ghc-paths            < 0.2  && >= 0.1.0.9
                      , ghc-syb-utils        < 0.3  && >= 0.2.3
                      , haskell-src-exts     < 1.20 && >= 1.18
                      , hlint                < 2.1  && >= 2.0.8
                      , monad-control        < 1.1  && >= 1
                      , monad-journal        < 0.8  && >= 0.4
                      , optparse-applicative < 0.14 && >= 0.13.0.0
                      , pipes                < 4.4  && >= 4.1
                      , safe                 < 0.4  && >= 0.3.9
                      , semigroups           < 0.19 && >= 0.10.0
                      , split                < 0.3  && >= 0.2.2
                      , syb                  < 0.7  && >= 0.5.1
                      , temporary            < 1.3  && >= 1.2.0.3
                      , text                 < 1.3  && >= 1.2.1.3
                      , transformers-base    < 0.5  && >= 0.4.4

                      , cabal-helper         < 0.8  && >= 0.7.3.0
                      , ghc                  < 8.2  && >= 7.6

  if impl(ghc >= 8.0)
    Build-Depends:      ghc-boot
  if impl(ghc < 7.8)
    Build-Depends:      convertible          < 1.2  && >= 1.1.0.0

Executable ghc-mod
  Default-Language:     Haskell2010
  Main-Is:              GhcModMain.hs
  Other-Modules:        Paths_ghc_mod
                      , GhcMod.Exe.Options
                      , GhcMod.Exe.Options.Commands
                      , GhcMod.Exe.Version
                      , GhcMod.Exe.Options.ShellParse
  GHC-Options:          -Wall -fno-warn-deprecations -threaded
  Default-Extensions:   ConstraintKinds, FlexibleContexts
  HS-Source-Dirs:       src, shared
  X-Internal:           True
  Build-Depends:
                      -- See Note [GHC Boot libraries]
                        directory
                      , filepath
                      , mtl
                      , process

                      , base                 < 4.10 && >= 4.6.0.1
                      , fclabels             < 2.1  && >= 2.0
                      , monad-control        < 1.1  && >= 1
                      , optparse-applicative < 0.14 && >= 0.13.0.0
                      , semigroups           < 0.19 && >= 0.10.0
                      , split                < 0.3  && >= 0.2.2

                      , ghc                  < 8.2  && >= 7.6
                      , ghc-mod


Executable ghc-modi
  Default-Language:     Haskell2010
  Main-Is:              GhcModi.hs
  Other-Modules:        Paths_ghc_mod
                        Utils
                        System.Directory.ModTime
  GHC-Options:          -Wall -threaded -fno-warn-deprecations
  if os(windows)
      Cpp-Options:      -DWINDOWS
  Default-Extensions:   ConstraintKinds, FlexibleContexts
  HS-Source-Dirs:       ., src, shared
  Build-Depends:
                      -- See Note [GHC Boot libraries]
                        binary
                      , deepseq
                      , directory
                      , filepath
                      , old-time
                      , process
                      , time

                      , base                 < 4.10 && >= 4.6.0.1

                      , ghc-mod


Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -Wall
  Default-Extensions:   ConstraintKinds, FlexibleContexts
  Main-Is:              doctests.hs
  Build-Depends:        base                 < 4.10 && >= 4.6.0.1
                      , doctest              < 0.12 && >= 0.9.3


Test-Suite spec
  Default-Language:     Haskell2010
  Default-Extensions:   ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                        ConstraintKinds, FlexibleContexts,
                        DataKinds, KindSignatures, TypeOperators, ViewPatterns
  Main-Is:              Main.hs
  Hs-Source-Dirs:       test, src
  Ghc-Options:          -Wall -fno-warn-deprecations -threaded
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Paths_ghc_mod
                        Dir
                        TestUtils

-- $ ls test/*Spec.hs | sed 's_^.*/\(.*\)\.hs$_\1_' | sort
                        BrowseSpec
                        CabalHelperSpec
                        CaseSplitSpec
                        CheckSpec
                        CradleSpec
                        CustomPackageDbSpec
                        FileMappingSpec
                        FindSpec
                        FlagSpec
                        GhcPkgSpec
                        HomeModuleGraphSpec
                        InfoSpec
                        LangSpec
                        LintSpec
                        ListSpec
                        MonadSpec
                        PathsAndFilesSpec
                        ShellParseSpec
                        TargetSpec

  Build-Depends:
                      -- See Note [GHC Boot libraries]
                        containers
                      , directory
                      , filepath
                      , mtl
                      , process
                      , transformers

                      , base                 < 4.10 && >= 4.6.0.1
                      , fclabels             < 2.1  && >= 2.0
                      , hspec                < 2.4  && >= 2.0.0
                      , monad-journal        < 0.8  && >= 0.4
                      , split                < 0.3  && >= 0.2.2
                      , temporary            < 1.3  && >= 1.2.0.3


  if impl(ghc < 7.8)
    Build-Depends:      convertible          < 1.2  && >= 1.1.0.0
  if impl(ghc >= 8.0)
    Build-Depends:      ghc-boot

  Build-Depends:
                        cabal-helper         < 0.8  && >= 0.7.1.0
                      , ghc                  < 8.2  && >= 7.6
                      , ghc-mod


Test-Suite shelltest
  Default-Language:     Haskell2010
  Main-Is:              ShellTest.hs
  Hs-Source-Dirs:       shelltest
  Type:                 exitcode-stdio-1.0
  Build-Tools:          shelltest
  Build-Depends:        base                 < 4.10 && >= 4.6.0.1
                      , process              < 1.5
                      -- , shelltestrunner >= 1.3.5
  if !flag(shelltest)
    Buildable: False


Benchmark criterion
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Default-Extensions:   ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                        ConstraintKinds, FlexibleContexts,
                        DataKinds, KindSignatures, TypeOperators, ViewPatterns
  HS-Source-Dirs:       bench, test
  Main-Is:              Bench.hs
  Build-Depends:
                      -- See Note [GHC Boot libraries]
                        directory
                      , filepath

                      , base                 < 4.10 && >= 4.6.0.1
                      , criterion            < 1.2  && >= 1.1.1.0
                      , temporary            < 1.3  && >= 1.2.0.3

                      , ghc-mod


Flag shelltest
  Description: Enable/disable shelltest test-suite
  Default: False
  Manual:  True


Source-Repository head
  Type:                 git
  Location:             https://github.com/DanielG/ghc-mod.git

-- Note [GHC Boot libraries]
--
-- We don't give bounds to GHC boot libraries as our dependency on 'ghc' already
-- constrains these packages to the version that shipped with GHC.
